Codigo Ejemplo/1. Principios Universales de Diseño Software/1.3 Composicion vs Herencia/ejercicio/EmpresaEnvio/src/main/java/org/example/bad/EnvioNacionalPremium.java
package org.example.bad;

public abstract class EnvioNacionalPremium extends EnvioNacional{
    @Override
    public double calcularCostoEnvio() {
        return super.calcularCostoEnvio() + 200;
    }
}
